
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int FAD ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int stdout ;

void re_connt(int st_sock_va)
{
        if(st_sock_va==(FAD))
        {
                fprintf(stdout," [ Fail ]\n\n");
                exit(FAD);
        }
}
