; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_22974.c_re_connt.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_22974.c_re_connt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FAD = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c" [ Fail ]\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @re_connt(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @FAD, align 4
  %5 = icmp eq i32 %3, %4
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i32, i32* @stdout, align 4
  %8 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* @FAD, align 4
  %10 = call i32 @exit(i32 %9) #3
  unreachable

11:                                               ; preds = %1
  ret void
}

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
